# VoidX-voronoi

./: .gitignore  BEFORE_AFTER.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTEBOOK_CONFIG.md  QUICKSTART.md  README.md  REFACTORING_NOTEBOOKS.md  REFACTORING_SUMMARY.md  VORONOI_GNN_GUIDE.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
config/: config_global.json
examples/: README.md  compare_mlp_gnn_voronoi.py  config_example.py  predict.py  train_model.py  use_refactored_modules.py
notebooks/: README.md  data_exploration.ipynb  data_preparation.ipynb  data_preparation_synthetic.ipynb  data_preparation_synthetic_LSS.ipynb  data_preparation_true.ipynb  model_training.ipynb  model_training_CNN.ipynb  reconstruction.ipynb  void_finder.ipynb  voronoi_mlp_vs_gnn.ipynb
tests/: __init__.py  test_voidx.py  test_voronoi.py
voidx/: __init__.py  clustering.py  config.py  data.py  lss_generators.py  models.py  preparation.py  reconstruction.py  train.py  voronoi.py
voidx_voronoi/: __init__.py  config.py  losses.py  ml_loader.py  models.py  plot.py  preparation.py  reconstruction.py  utils.py
